syntax = "proto3";
package neoshowcase.protobuf;
option go_package = "github.com/traPtitech/neoshowcase/pkg/interface/grpc/pb";

import "google/protobuf/empty.proto";

enum BuilderStatus {
  UNKNOWN = 0;
  UNAVAILABLE = 1;
  WAITING = 2;
  BUILDING = 3;
}

message GetStatusResponse {
  BuilderStatus status = 1;
  string build_id = 2;
}

message BuildSource {
  string repository_url = 1;
  string commit = 2;
}

message BuildOptions {
  string base_image_name = 1;
  string entrypoint_cmd = 2;
  string startup_cmd = 3;
  string artifact_path = 4;
}

message StartBuildImageRequest {
  string image_name = 1;
  string image_tag = 2;
  BuildSource source = 3;
  BuildOptions options = 4;
  string build_id = 5;
  string application_id = 6;
}

message StartBuildImageResponse {
}

message StartBuildStaticRequest {
  BuildSource source = 1;
  BuildOptions options = 2;
  string build_id = 3;
  string application_id = 4;
}

message StartBuildStaticResponse {
}

message CancelTaskResponse {
  bool canceled = 1;
  string build_id = 2;
}

message Event {
  enum Type {
    CONNECTED = 0;
    BUILD_STARTED = 1;
    BUILD_SUCCEEDED = 2;
    BUILD_FAILED = 3;
    BUILD_CANCELED = 4;
  }
  Type type = 1;
  string body = 2;
}

service BuilderService {
  rpc GetStatus (google.protobuf.Empty) returns (GetStatusResponse);
  rpc ConnectEventStream (google.protobuf.Empty) returns (stream Event);
  rpc StartBuildImage (StartBuildImageRequest) returns (StartBuildImageResponse);
  rpc StartBuildStatic (StartBuildStaticRequest) returns (StartBuildStaticResponse);
  rpc CancelTask (google.protobuf.Empty) returns (CancelTaskResponse);
}
